--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.8.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
