--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Reactle",
-  "name": "Reactle",
+  "short_name": "Caesardle",
+  "name": "Caesardle",
   "icons": [
     {
       "src": "favicon.ico",
