Change daily game solution index offset, fix styling

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 CI=false
 REACT_APP_GAME_NAME=Caesardle
-REACT_APP_GAME_DESCRIPTION=A ebjmz (daily) word game
+REACT_APP_GAME_DESCRIPTION=Wordle, but shifted to Xpsemf
 REACT_APP_LOCALE_STRING=
 MONGODB_URI=
 PORT=3001
